added foursquare subdirectories paths

--- a/preprocessing/foursquare/prepro.ipynb
+++ b/preprocessing/foursquare/prepro.ipynb
@@ -17,7 +17,15 @@
    "outputs": [],
    "source": [
     "current_working_directory = os.getcwd()\n",
-    "DATA_DIR=os.path.join(current_working_directory, 'data')\n"
+    "DATA_DIR=os.path.join(current_working_directory, 'data')\n",
+    "SUBSET_DIR='tokyo_newyork'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tokyo&New York Checkins"
    ]
   },
   {
@@ -26,8 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokyo= pd.read_csv(os.path.join(DATA_DIR,'dataset_TSMC2014_TKY.csv'))\n",
-    "new_york= pd.read_csv(os.path.join(DATA_DIR,'dataset_TSMC2014_NYC.csv'))"
+    "tokyo= pd.read_csv(os.path.join(DATA_DIR,SUBSET_DIR,'dataset_TSMC2014_TKY.csv'))\n",
+    "new_york= pd.read_csv(os.path.join(DATA_DIR,SUBSET_DIR,'dataset_TSMC2014_NYC.csv'))"
    ]
   },
   {
@@ -846,7 +854,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_parquet(os.path.join(DATA_DIR,'tokyo_newyork.parquet'))"
+    "data.to_parquet(os.path.join(DATA_DIR,SUBSET_DIR,'tokyo_newyork.parquet'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NY City restaurants"
    ]
   },
   {
@@ -854,6 +869,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Global Checkins"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
