--- a/baseline/regression/concept.ipynb
+++ b/baseline/regression/concept.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "CITY = \"Paris\"\n",
-    "COUNTRY = \"FRANCE\"\n",
+    "COUNTRY = \"France\"\n",
     "HEX_RESOLUTION = 10\n",
     "HF_KEY = \"\""
    ]
@@ -101,7 +101,7 @@
     "# For He2vecEmbedder neccessery to correct error in library\n",
     "# In srai library, one has to cast neighbourhoods to set in neighbourhoods/_base.py\n",
     "\n",
-    "# embedding_layerss=[200,100,50]\n",
+    "# embedding_layers=[200,100,50]\n",
     "# embedding_size=embeddings_layers[-1]\n",
     "# neighbourhood = H3Neighbourhood(regions_gdf)\n",
     "# embedder = Hex2VecEmbedder(embeddings_layers)\n",
