--- a/preprocessing/T-Drive/tdrive_linestring.ipynb
+++ b/preprocessing/T-Drive/tdrive_linestring.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-22T21:48:28.046077Z",
-     "start_time": "2024-02-22T21:48:28.006932Z"
+     "end_time": "2024-04-25T22:32:44.462204Z",
+     "start_time": "2024-04-25T22:32:35.908484Z"
     }
    },
    "outputs": [],
@@ -48,28 +48,18 @@
    ],
    "source": [
     "col = ['taxi_id', 'date_time', 'lon', 'lat']\n",
-    "path = 'input_data/taxi_log_2008_by_id'\n",
+    "path = 't_drive_raw'\n",
     "print('Liczba plików: ', len(os.listdir(path)))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T21:48:28.110297Z",
-     "start_time": "2024-02-22T21:48:28.049809Z"
+     "end_time": "2024-04-25T22:32:57.513304Z",
+     "start_time": "2024-04-25T22:32:57.506994Z"
     }
    },
    "id": "1281e7c4bbe8077",
-   "execution_count": 89
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# "
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "49e89cec2b8bd47d"
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -78,16 +68,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10357/10357 [01:44<00:00, 98.91it/s] IOPub data rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
+      "100%|██████████| 10357/10357 [00:52<00:00, 195.81it/s]\n",
+      "IOPub data rate exceeded.\n",
+      "The Jupyter server will temporarily stop sending output\n",
       "to the client in order to avoid crashing it.\n",
       "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_data_rate_limit`.\n",
+      "`--ServerApp.iopub_data_rate_limit`.\n",
       "\n",
       "Current values:\n",
-      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n",
+      "ServerApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+      "ServerApp.rate_limit_window=3.0 (secs)\n",
       "\n"
      ]
     }
@@ -111,12 +101,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T21:50:36.429063Z",
-     "start_time": "2024-02-22T21:48:34.441307Z"
+     "end_time": "2024-04-25T22:36:07.029641Z",
+     "start_time": "2024-04-25T22:34:59.779308Z"
     }
    },
    "id": "3392213b1acf622d",
-   "execution_count": 90
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -126,7 +116,7 @@
       "text/plain": "  taxi_id            date_time        lon       lat\n0       1  2008-02-02 15:36:08  116.51172  39.92123\n1       1  2008-02-02 15:46:08  116.51135  39.93883\n2       1  2008-02-02 15:46:08  116.51135  39.93883\n3       1  2008-02-02 15:56:08  116.51627  39.91034\n4       1  2008-02-02 16:06:08  116.47186  39.91248",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>taxi_id</th>\n      <th>date_time</th>\n      <th>lon</th>\n      <th>lat</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>2008-02-02 15:36:08</td>\n      <td>116.51172</td>\n      <td>39.92123</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>2008-02-02 15:46:08</td>\n      <td>116.51135</td>\n      <td>39.93883</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>2008-02-02 15:46:08</td>\n      <td>116.51135</td>\n      <td>39.93883</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>2008-02-02 15:56:08</td>\n      <td>116.51627</td>\n      <td>39.91034</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>2008-02-02 16:06:08</td>\n      <td>116.47186</td>\n      <td>39.91248</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 91,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,12 +128,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T21:51:06.263573Z",
-     "start_time": "2024-02-22T21:50:52.805674Z"
+     "end_time": "2024-04-25T22:38:20.705620Z",
+     "start_time": "2024-04-25T22:38:08.865861Z"
     }
    },
    "id": "c3c6b6c2bec34047",
-   "execution_count": 91
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -155,12 +145,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T21:51:22.706454Z",
-     "start_time": "2024-02-22T21:51:08.501964Z"
+     "end_time": "2024-04-25T22:38:24.598992Z",
+     "start_time": "2024-04-25T22:38:20.704048Z"
     }
    },
    "id": "fd73924799c4c2d8",
-   "execution_count": 92
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -169,7 +159,7 @@
      "data": {
       "text/plain": "Timestamp('2008-02-02 15:36:08')"
      },
-     "execution_count": 93,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,12 +170,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T21:51:22.905167Z",
-     "start_time": "2024-02-22T21:51:22.702430Z"
+     "end_time": "2024-04-25T22:38:24.614863Z",
+     "start_time": "2024-04-25T22:38:24.602237Z"
     }
    },
    "id": "e490be860c45e872",
-   "execution_count": 93
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -194,7 +184,7 @@
      "data": {
       "text/plain": "(17662984, 4)"
      },
-     "execution_count": 94,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,12 +195,44 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-22T21:51:23.007952Z",
-     "start_time": "2024-02-22T21:51:22.706211Z"
+     "end_time": "2024-04-25T22:38:24.615825Z",
+     "start_time": "2024-04-25T22:38:24.608273Z"
     }
    },
    "id": "f105ece0e3dbdeb2",
-   "execution_count": 94
+   "execution_count": 8
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "gdf = gpd.GeoDataFrame(out_df, geometry=gpd.points_from_xy(out_df.lon, out_df.lat), crs='EPSG:4326')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-25T22:39:59.030849Z",
+     "start_time": "2024-04-25T22:38:30.312242Z"
+    }
+   },
+   "id": "38e8f75dea036b0a",
+   "execution_count": 9
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "gdf.to_parquet('t_drive.parquet')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-25T22:41:09.268815Z",
+     "start_time": "2024-04-25T22:40:31.943667Z"
+    }
+   },
+   "id": "effa28925ae51cd8",
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -225,15 +247,15 @@
     }
    ],
    "source": [
-    "unique_ids = out_df['taxi_id'].unique()\n",
-    "train_ids, testval_ids = train_test_split(unique_ids, test_size=0.2, random_state=42)\n",
-    "val_ids, test_ids = train_test_split(testval_ids, test_size=0.5, random_state=42)\n",
-    "\n",
-    "train_df = out_df[out_df['taxi_id'].isin(train_ids)]\n",
-    "val_df = out_df[out_df['taxi_id'].isin(val_ids)]\n",
-    "test_df = out_df[out_df['taxi_id'].isin(test_ids)]\n",
-    "\n",
-    "train_df.shape, val_df.shape, test_df.shape"
+    "# unique_ids = out_df['taxi_id'].unique()\n",
+    "# train_ids, testval_ids = train_test_split(unique_ids, test_size=0.2, random_state=42)\n",
+    "# val_ids, test_ids = train_test_split(testval_ids, test_size=0.5, random_state=42)\n",
+    "# \n",
+    "# train_df = out_df[out_df['taxi_id'].isin(train_ids)]\n",
+    "# val_df = out_df[out_df['taxi_id'].isin(val_ids)]\n",
+    "# test_df = out_df[out_df['taxi_id'].isin(test_ids)]\n",
+    "# \n",
+    "# train_df.shape, val_df.shape, test_df.shape"
    ],
    "metadata": {
     "collapsed": false,
@@ -258,7 +280,7 @@
     }
    ],
    "source": [
-    "train_df.shape[0]/out_df.shape[0]*100, val_df.shape[0]/out_df.shape[0]*100, test_df.shape[0]/out_df.shape[0]*100"
+    "# train_df.shape[0]/out_df.shape[0]*100, val_df.shape[0]/out_df.shape[0]*100, test_df.shape[0]/out_df.shape[0]*100"
    ],
    "metadata": {
     "collapsed": false,
