Store timestamp instead of datetime on HF

--- a/postprocessing/PortoTaxi/porto_taxi_postprocessing.ipynb
+++ b/postprocessing/PortoTaxi/porto_taxi_postprocessing.ipynb
@@ -13,6 +13,8 @@
   {
    "cell_type": "code",
    "source": [
+    "from datetime import datetime\n",
+    "\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "from shapely import Point\n",
@@ -21,22 +23,13 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:30:16.797708Z",
-     "start_time": "2024-05-26T13:30:16.467105Z"
+     "end_time": "2024-05-26T14:52:35.229309Z",
+     "start_time": "2024-05-26T14:52:35.226296Z"
     }
    },
    "id": "initial_id",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Jakub\\AppData\\Local\\Temp\\ipykernel_56712\\2431355484.py:4: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -54,13 +47,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:30:16.962795Z",
-     "start_time": "2024-05-26T13:30:16.798712Z"
+     "end_time": "2024-05-26T14:52:36.776762Z",
+     "start_time": "2024-05-26T14:52:36.632884Z"
     }
    },
    "id": "d3bc2c16409826c1",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 17
   },
   {
    "cell_type": "code",
@@ -70,8 +63,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:30:16.971799Z",
-     "start_time": "2024-05-26T13:30:16.962795Z"
+     "end_time": "2024-05-26T14:52:44.240704Z",
+     "start_time": "2024-05-26T14:52:44.235664Z"
     }
    },
    "id": "cf6644780eb30fe6",
@@ -79,19 +72,19 @@
     {
      "data": {
       "text/plain": [
-       "            timestamp              trip_id call_type  origin_call  \\\n",
-       "0 2013-07-01 02:04:44  1372637084620000285         C          NaN   \n",
-       "1 2013-07-01 02:04:59  1372637084620000285         C          NaN   \n",
-       "2 2013-07-01 02:05:14  1372637084620000285         C          NaN   \n",
-       "3 2013-07-01 02:05:29  1372637084620000285         C          NaN   \n",
-       "4 2013-07-01 02:05:44  1372637084620000285         C          NaN   \n",
+       "      timestamp              trip_id call_type  origin_call  origin_stand  \\\n",
+       "0  1.372637e+09  1372637084620000285         C          NaN           NaN   \n",
+       "1  1.372637e+09  1372637084620000285         C          NaN           NaN   \n",
+       "2  1.372637e+09  1372637084620000285         C          NaN           NaN   \n",
+       "3  1.372637e+09  1372637084620000285         C          NaN           NaN   \n",
+       "4  1.372637e+09  1372637084620000285         C          NaN           NaN   \n",
        "\n",
-       "   origin_stand   taxi_id day_type      speed  longitude   latitude  \n",
-       "0           NaN  20000285        A   9.733089  -8.585685  41.148576  \n",
-       "1           NaN  20000285        A   9.733089  -8.585766  41.148936  \n",
-       "2           NaN  20000285        A  12.120171  -8.586360  41.148864  \n",
-       "3           NaN  20000285        A  23.865080  -8.586243  41.147973  \n",
-       "4           NaN  20000285        A  24.176693  -8.587170  41.147397  "
+       "    taxi_id day_type      speed  longitude   latitude  \n",
+       "0  20000285        A   9.733089  -8.585685  41.148576  \n",
+       "1  20000285        A   9.733089  -8.585766  41.148936  \n",
+       "2  20000285        A  12.120171  -8.586360  41.148864  \n",
+       "3  20000285        A  23.865080  -8.586243  41.147973  \n",
+       "4  20000285        A  24.176693  -8.587170  41.147397  "
       ],
       "text/html": [
        "<div>\n",
@@ -127,7 +120,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2013-07-01 02:04:44</td>\n",
+       "      <td>1.372637e+09</td>\n",
        "      <td>1372637084620000285</td>\n",
        "      <td>C</td>\n",
        "      <td>NaN</td>\n",
@@ -140,7 +133,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2013-07-01 02:04:59</td>\n",
+       "      <td>1.372637e+09</td>\n",
        "      <td>1372637084620000285</td>\n",
        "      <td>C</td>\n",
        "      <td>NaN</td>\n",
@@ -153,7 +146,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2013-07-01 02:05:14</td>\n",
+       "      <td>1.372637e+09</td>\n",
        "      <td>1372637084620000285</td>\n",
        "      <td>C</td>\n",
        "      <td>NaN</td>\n",
@@ -166,7 +159,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2013-07-01 02:05:29</td>\n",
+       "      <td>1.372637e+09</td>\n",
        "      <td>1372637084620000285</td>\n",
        "      <td>C</td>\n",
        "      <td>NaN</td>\n",
@@ -179,7 +172,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2013-07-01 02:05:44</td>\n",
+       "      <td>1.372637e+09</td>\n",
        "      <td>1372637084620000285</td>\n",
        "      <td>C</td>\n",
        "      <td>NaN</td>\n",
@@ -195,12 +188,12 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 19
   },
   {
    "cell_type": "code",
@@ -210,8 +203,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:30:16.977234Z",
-     "start_time": "2024-05-26T13:30:16.972303Z"
+     "end_time": "2024-05-26T14:52:44.960071Z",
+     "start_time": "2024-05-26T14:52:44.954685Z"
     }
    },
    "id": "5ce84e895d1fa5e3",
@@ -223,24 +216,24 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2545947 entries, 0 to 2545946\n",
       "Data columns (total 10 columns):\n",
-      " #   Column        Dtype         \n",
-      "---  ------        -----         \n",
-      " 0   timestamp     datetime64[ns]\n",
-      " 1   trip_id       int64         \n",
-      " 2   call_type     object        \n",
-      " 3   origin_call   float64       \n",
-      " 4   origin_stand  float64       \n",
-      " 5   taxi_id       int64         \n",
-      " 6   day_type      object        \n",
-      " 7   speed         float64       \n",
-      " 8   longitude     float64       \n",
-      " 9   latitude      float64       \n",
-      "dtypes: datetime64[ns](1), float64(5), int64(2), object(2)\n",
+      " #   Column        Dtype  \n",
+      "---  ------        -----  \n",
+      " 0   timestamp     float64\n",
+      " 1   trip_id       int64  \n",
+      " 2   call_type     object \n",
+      " 3   origin_call   float64\n",
+      " 4   origin_stand  float64\n",
+      " 5   taxi_id       int64  \n",
+      " 6   day_type      object \n",
+      " 7   speed         float64\n",
+      " 8   longitude     float64\n",
+      " 9   latitude      float64\n",
+      "dtypes: float64(6), int64(2), object(2)\n",
       "memory usage: 194.2+ MB\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 20
   },
   {
    "metadata": {},
@@ -251,13 +244,57 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:30:37.874715Z",
-     "start_time": "2024-05-26T13:30:16.978746Z"
+     "end_time": "2024-05-26T14:52:46.546529Z",
+     "start_time": "2024-05-26T14:52:46.544405Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "tqdm.pandas()",
+   "id": "45674f7798777842",
+   "outputs": [],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-26T14:52:49.717577Z",
+     "start_time": "2024-05-26T14:52:47.505318Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "tqdm.pandas()\n",
+    "df_porto_taxi[\"timestamp\"] = df_porto_taxi[\"timestamp\"].progress_apply(\n",
+    "    lambda x: datetime.fromtimestamp(x)\n",
+    ")"
+   ],
+   "id": "2f00a33f67a53328",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  0%|          | 0/2545947 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "312fbf8b86df455ca1e4106ba8a46d7e"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-26T14:53:10.921366Z",
+     "start_time": "2024-05-26T14:52:50.374823Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "df_porto_taxi[\"geometry\"] = df_porto_taxi.progress_apply(\n",
     "    lambda row: Point(row[\"longitude\"], row[\"latitude\"]), axis=1\n",
     ")"
@@ -272,33 +309,33 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7b96cd76f9dd4c0e83bef919c796fdca"
+       "model_id": "1a201b4f4af14bc3b61e234142368967"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 5
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:30:37.933831Z",
-     "start_time": "2024-05-26T13:30:37.875229Z"
+     "end_time": "2024-05-26T14:53:10.982811Z",
+     "start_time": "2024-05-26T14:53:10.921366Z"
     }
    },
    "cell_type": "code",
    "source": "df_porto_taxi.drop([\"longitude\", \"latitude\"], axis=1, inplace=True)",
    "id": "66770562b1dd6530",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:30:39.598749Z",
-     "start_time": "2024-05-26T13:30:37.933831Z"
+     "end_time": "2024-05-26T14:53:12.671954Z",
+     "start_time": "2024-05-26T14:53:10.982811Z"
     }
    },
    "cell_type": "code",
@@ -309,13 +346,13 @@
    ],
    "id": "f8ca79a0a3e92748",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:30:39.606276Z",
-     "start_time": "2024-05-26T13:30:39.599753Z"
+     "end_time": "2024-05-26T14:53:12.678966Z",
+     "start_time": "2024-05-26T14:53:12.672957Z"
     }
    },
    "cell_type": "code",
@@ -435,12 +472,12 @@
        "</div>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 26
   }
  ],
  "metadata": {
