--- a/preprocessing/PortoTaxi/porto_taxi_preprocessing.ipynb
+++ b/preprocessing/PortoTaxi/porto_taxi_preprocessing.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-26T12:46:44.970043Z",
-     "start_time": "2024-05-26T12:46:43.899992Z"
+     "end_time": "2024-05-26T14:38:49.431139Z",
+     "start_time": "2024-05-26T14:38:49.427564Z"
     }
    },
    "source": [
@@ -33,17 +33,8 @@
     "from tqdm.autonotebook import tqdm\n",
     "from tqdm.contrib.concurrent import process_map"
    ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Jakub\\AppData\\Local\\Temp\\ipykernel_28260\\4292766932.py:14: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 38
   },
   {
    "metadata": {
@@ -968,7 +959,13 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Separate Point to x, y coordinates",
+   "source": "# Adapt to Parquet format on HuggingFace",
+   "id": "7b04a763fa31495c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Separate Point to x, y coordinates",
    "id": "d820505552f976a"
   },
   {
@@ -1003,10 +1000,39 @@
    "execution_count": 36
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Convert datetime to timestamp",
+   "id": "b673c57173d4fdb9"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T13:22:20.175607Z",
-     "start_time": "2024-05-26T13:22:19.403891Z"
+     "end_time": "2024-05-26T14:52:18.460585Z",
+     "start_time": "2024-05-26T14:52:17.061633Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "gdf_trajectory_point_collection[\"timestamp\"] = gdf_trajectory_point_collection[\n",
+    "    \"timestamp\"\n",
+    "].apply(lambda x: datetime.timestamp(x))"
+   ],
+   "id": "3c9df4813f21c54c",
+   "outputs": [],
+   "execution_count": 55
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Save to parquet",
+   "id": "1ddd120d541e76f7"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-26T14:52:21.714636Z",
+     "start_time": "2024-05-26T14:52:20.962094Z"
     }
    },
    "cell_type": "code",
@@ -1015,7 +1041,7 @@
    ],
    "id": "fb508f396a85e233",
    "outputs": [],
-   "execution_count": 37
+   "execution_count": 56
   }
  ],
  "metadata": {
